--- a/package.json
+++ b/package.json
@@ -3,5 +3,5 @@
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
-  "repository": {}
+  "repository": "https://github.com/SergeLavrentyev/less-flexbox-grid"
 }
